adding comments to syntax.css

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,4 +1,13 @@
+/***********
+*
+*   Author: Jakub K.
+*
+************/
+
+/* style for <p> tags */
+
 p{
     font-size: 18px;
     color: blueviolet;
 }
+
