--- a/css/syntax.css
+++ b/css/syntax.css
@@ -4,10 +4,27 @@
 *
 ************/
 
-/* style for <p> tags */
+/* tag styles */
 
 p{
     font-size: 18px;
     color: blueviolet;
 }
 
+a{
+    text-decoration: underline;
+    color: blue;
+}
+
+span{
+    text-transform: uppercase;
+}
+
+h1{
+    font-size: 32px;
+}
+
+div{
+    width: 100%;
+    background-color: grey;
+}
