--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,25 +6,20 @@
 
 /* tag styles */
 
-p{
+#content-header{
     font-size: 18px;
-    color: blueviolet;
+    color: red;
 }
 
-a{
-    text-decoration: underline;
-    color: blue;
+h2{
+    font-size: 24px;
 }
 
 span{
-    text-transform: uppercase;
+    display: block;
+    color: blue;
 }
 
-h1{
-    font-size: 32px;
-}
-
-div{
-    width: 100%;
-    background-color: grey;
+.deck{
+    color: red;
 }
