creating conflicts and testing inheritance

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,10 +6,14 @@
 
 /* tag styles */
 
-span{
-    color: blue;
+body{
+    color: red;
 }
 
-span{
-    color: red;
+p{
+    color: green;
+}
+
+div{
+    color: blue;
 }
