--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,9 +6,6 @@
 
 /* tag styles */
 
-p, span, a, li{
+#sub-content p{
     color: red;
-    font-size: 14px;
-    font-weight: bold;
-    font-family: Arial;
 }
