usiing css pseudo classes

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -10,18 +10,6 @@ div, p, a, span, ul{
     display: block;
 }
 
-span[class~="deck"]{
-    color: purple;
-}
-
-div[id]{
-    background: grey;
-}
-
-a[title="Wirtualna Polska"]{
-    color: fuchsia;
-}
-
-a[href$=".pdf"]{
-    color: red;
+a:hover{
+    color: magenta;
 }
