--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,14 +6,6 @@
 
 /* tag styles */
 
-li:nth-child(1), li:nth-child(7){
-    font-weight: bold;
-}
-
-li:nth-child(even){
+article:nth-of-type(odd){
     background: grey;
-}
-
-li:nth-child(odd){
-    background: pink;
 }
