--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,6 +6,10 @@
 
 /* tag styles */
 
-article:nth-of-type(odd){
-    background: grey;
+article.featured-content{
+    background: red;
+}
+
+div.featured-content{
+    background: blue;
 }
