--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,10 +6,14 @@
 
 /* tag styles */
 
-*{
-    color: yellow;
+article{
+    font-size: 16px;
 }
 
-p{
-    color: red;
+article h2{
+    font-size: 3em;
+}
+
+article a{
+    font-size: 110%;
 }
