--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,10 +6,11 @@
 
 /* tag styles */
 
-article{
-    text-decoration: overline;
+h1{
+    font-weight: normal;
 }
 
-a{
-    text-decoration: darkred;
+p{
+    font-weight: bolder;
+    font-family: "Liberation Sans"
 }
