testing text transforms

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,11 +6,10 @@
 
 /* tag styles */
 
-h1{
-    font-weight: normal;
+#header p{
+    text-transform: capitalize;
 }
 
-p{
-    font-weight: bolder;
-    font-family: "Liberation Sans"
+body > p{
+    text-transform: uppercase;
 }
