--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,10 +6,14 @@
 
 /* tag styles */
 
-#header h1{
-    color: chocolate;
+a{
+    color: crimson;
+    text-decoration: none;
+    font-weight: bold;
 }
 
-#header{
-    background-color:
+a:hover{
+    color: darkmagenta;
+    text-decoration: underline;
+    background-color: aquamarine;
 }
