--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,14 +6,9 @@
 
 /* tag styles */
 
-a{
-    color: crimson;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-a:hover{
-    color: darkmagenta;
-    text-decoration: underline;
-    background-color: aquamarine;
+p{
+    font-size: 12px;
+    letter-spacing: normal;
+    word-spacing: 2px;
+    line-height: 1.5em;
 }
