--- a/css/syntax.css
+++ b/css/syntax.css
@@ -7,9 +7,9 @@
 /* tag styles */
 
 .box{
-    margin: 30px;
+    margin: 30px auto;
     padding: 30px;
     border: 2px solid black;
-    /* width: 400px;
-    height: 200px; */
+    width: 300px;
+    /* height: 200px; */
 }
