--- a/css/syntax.css
+++ b/css/syntax.css
@@ -7,9 +7,7 @@
 /* tag styles */
 
 .box{
-    margin: 30px auto;
-    padding: 30px;
+    margin: 30px;
+    padding: 30px 20px 10px 5px;
     border: 2px solid black;
-    width: 300px;
-    /* height: 200px; */
 }
