--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,25 +6,22 @@
 
 /* tag styles */
 
-.block{
-    padding: 10px;
-    margin: 10px;
-    border: 1px solid black;
+#main-content div{
+    background-color: grey;
+    margin: 0 0 20px 0;
 }
 
-.inline{
-    padding: 10px;
-    margin: 10px;
-    border: 1px solid black;
-    display: inline-block;
+.static-width{
+    width: 300px;
+    height: 100px;
 }
 
-a{
-    padding: 10px;
-    margin: 10px;
-    background-color: blue;
-    border: 1px solid black;
-    color: green;
-    text-decoration: none;
+.percentage-width{
+    width: 70%;
+    height: 50px;
+}
+
+.inline-block{
+    width: 40%;
     display: inline-block;
 }
