--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,8 +6,12 @@
 
 /* tag styles */
 
-.static-width{
-    width: 300px;
+#banner{
+    background-color: #606060;
+    width: 100%;
     height: 300px;
-    background: url(http://zoowitek.pl/environment/cache/images/0_0_productGfx_7b590604736b4a68438f1d64da7b4cc6.jpg);
+    background-image: url(http://www.pngpix.com/wp-content/uploads/2016/07/PNGPIX-COM-Pepsi-Logo-PNG-Transparent-500x667.png), url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Ptenopus_carpi_Carp%27s_barking_gecko_licking_eye_Chantelle_Bosch.png/220px-Ptenopus_carpi_Carp%27s_barking_gecko_licking_eye_Chantelle_Bosch.png);
+    background-size: contain, 100%;
+    background-position: center, top left;
+    background-repeat: no-repeat;
 }
