--- a/css/syntax.css
+++ b/css/syntax.css
@@ -7,11 +7,7 @@
 /* tag styles */
 
 #banner{
-    background-color: #606060;
     width: 100%;
     height: 300px;
-    background-image: url(http://www.pngpix.com/wp-content/uploads/2016/07/PNGPIX-COM-Pepsi-Logo-PNG-Transparent-500x667.png), url(https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Ptenopus_carpi_Carp%27s_barking_gecko_licking_eye_Chantelle_Bosch.png/220px-Ptenopus_carpi_Carp%27s_barking_gecko_licking_eye_Chantelle_Bosch.png);
-    background-size: contain, 100%;
-    background-position: center, top left;
-    background-repeat: no-repeat;
+    background-color: #b12c2c62;
 }
